--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,6 @@ reqwest = { version = "0.11.14", default-features = false, features = ["rustls-t
 tokio = { version = "1.25.0", features = ["full"] }
 chrono = "0.4.23"
 serde = { version = "1.0.152", features = ["derive"] }
-serde_json = "1.0.93"
+toml = "0.7.2"
+itertools = "0.11.0"
+serde_json = "1.0.108"
